Add: productsコントローラー追加
